# bicol-app

./: .codebuffignore  .coverage  .env.example  .env.migration  .gitignore  COMPETITIVE_PLAN.md  DESIGN.md  GEMINI.md  IMPLEMENTATION_TODO_TOMORROW.md  POST_AUDIT_PLAN.md  PRODUCT.md  README.md  SESSION_LOG.md  ai_wiktionary_scraper.py  analyze_supabase.ts  app.js  browse-pagination-spec.md  build_output.txt  build_output_2.txt  build_output_3.txt  capacitor.config.json  check_anon.js  check_data.js  color-palette-spec.md  count_bikol_words.py  dev_output.txt  eslint.config.mjs  fix_inaccurate_translations.py  generate_tagalog.js  index.html  knowledge.md  lint_output.txt  next.config.js  next.config.mjs  package-lock.json  package.json  plan.md  prisma.config.ts  pyproject.toml  python_utils.py  (+10 more)
.agents/: .scope-tmp.json  .skill-cache.json  README.md  agent-definition.ts  ecc-a11y-architect.ts  ecc-architect.ts  ecc-build-error-resolver.ts  ecc-chief-of-staff.ts  ecc-code-architect.ts  ecc-code-explorer.ts  ecc-code-reviewer.ts  ecc-code-simplifier.ts  ecc-comment-analyzer.ts  ecc-conversation-analyzer.ts  ecc-cpp-build-resolver.ts  ecc-cpp-reviewer.ts  ecc-csharp-reviewer.ts  ecc-dart-build-resolver.ts  ecc-database-reviewer.ts  ecc-django-build-resolver.ts  ecc-django-reviewer.ts  ecc-doc-updater.ts  ecc-docs-lookup.ts  ecc-e2e-runner.ts  ecc-fastapi-reviewer.ts  ecc-flutter-reviewer.ts  ecc-fsharp-reviewer.ts  ecc-gan-evaluator.ts  ecc-gan-generator.ts  ecc-gan-planner.ts  ecc-go-build-resolver.ts  ecc-go-reviewer.ts  ecc-harmonyos-app-resolver.ts  ecc-java-reviewer.ts  (+48 more)
(+227 files in other folders)
