[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bikoldict"
version = "0.1.0"
description = "A Bikol dictionary application with AI enrichment and Wiktionary scraping."
authors = []
dependencies = [
    "requests",
    "python-dotenv",
    "groq",
    "supabase",
    "beautifulsoup4",
    "google-genai",
    "tenacity",
    "pybreaker",
    "pydantic",
    "aiohttp",
    "aiocache",
    "aiolimiter",
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "aioresponses",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "venv/*", "node_modules/*", "android/*"]

[tool.setuptools.packages.find]
exclude = ["android*", "node_modules*", "www*", "config*"]

[tool.black]
line-length = 88
